@@ -254,6 +254,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 17502) meta=siteinfo&siprop=namespacealiases no longer lists namespace
   aliases already listed in siprop=namespaces
 * (bug 17529) rvend ignored when rvstartid is specified
+* (bug 17626) Added uiprop=email to list=userinfo
 
 === Languages updated in 1.15 ===
 
